--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+.myBox {
+  box-shadow: #ce5ef8 1px 1px 1px 1px, #ce5ef8 2px 1px 1px 0px,
+    #ce5ef8 -1px 1px 1px -2px, #d06ff7 -2px -1px 1px 0px;
+}
+.myBox:hover,
+.myBox:focus,
+.myBox:active {
+  box-shadow: #cd69f4 2px 2px 6px 2px, #cd69f4 4px 2px 1px 0px,
+    #cd69f4 -4px 2px 6px -1px, #cd69f4 -4px -2px 6px -1px;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.05);
+  opacity: 8;
+}
+
 /* sweep-to-right
 ============================== */
 .hvr-sweep-to-right {
