--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 .myBox {
-  box-shadow: #ce5ef8 1px 1px 1px 1px, #ce5ef8 1px 1px 1px 0px,
-    #ce5ef8 -1px 1px 1px -2px, #d06ff7 -2px -1px 1px 0px;
+  box-shadow: #8613d3 1px 1px 1px 1px, #8613d3 1px 1px 1px 0px,
+    #8613d3 -1px 1px 1px -2px, #d06ff7 -2px -1px 1px 0px;
 }
 .myBox:hover,
 .myBox:focus,
@@ -38,7 +38,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #ce5ef8;
+  background: #8613d3;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 0 50%;
@@ -53,7 +53,7 @@
 .hvr-sweep-to-right:hover,
 .hvr-sweep-to-right:focus,
 .hvr-sweep-to-right:active {
-  color: #000;
+  color: #fff;
   font-weight: bold;
 }
 .hvr-sweep-to-right:hover:before,
@@ -81,7 +81,7 @@
   left: 51%;
   right: 51%;
   bottom: 0;
-  background: #ce5ef8;
+  background: #8613d3;
   height: 4px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
@@ -119,7 +119,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #ce5ef8;
+  background: #8613d3;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 0 50%;
@@ -167,7 +167,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: #ce5ef8;
+  background: #8613d3;
   -webkit-transform: scaleY(0);
   transform: scaleY(0);
   -webkit-transform-origin: 50%;
@@ -216,7 +216,7 @@
   right: 0;
   bottom: 0;
   font-weight: bold;
-  background: #ce5ef8;
+  background: #8613d3;
   border-radius: 100%;
   -webkit-transform: scale(0);
   transform: scale(0);
@@ -248,7 +248,7 @@
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
   overflow: hidden;
-  background: #ce5ef8;
+  background: #8613d3;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -315,7 +315,7 @@
 .hvr-ripple-out:before {
   content: "";
   position: absolute;
-  border: #ce5ef8 solid 6px;
+  border: #8613d3 solid 6px;
   top: 0;
   right: 0;
   bottom: 0;
@@ -361,7 +361,7 @@
   content: "";
   position: absolute;
 
-  border: #ce5ef8 solid 4px;
+  border: #8613d3 solid 4px;
   top: -12px;
   right: -12px;
   bottom: -12px;
