added new bg and text color to about page

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@
   opacity: 8;
 }
 
-
 /* sweep-to-right
 ============================== */
 .hvr-sweep-to-right {
@@ -154,7 +153,7 @@
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
-  background: #e1e1e1;
+  background: transparent;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
