--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@
   left: 51%;
   right: 51%;
   bottom: 0;
-  background: #8613d3;
+  background: #cd69f4;
   height: 4px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
@@ -222,15 +222,15 @@
   transform: scale(0);
   -webkit-transition-property: transform;
   transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
 .hvr-radial-out:hover,
 .hvr-radial-out:focus,
 .hvr-radial-out:active {
-  color: #000;
+  color: #fff;
 }
 .hvr-radial-out:hover:before,
 .hvr-radial-out:focus:before,
